--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-fast-image": "^7.0.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-timer-mixin": "^0.13.4"
   },
   "devDependencies": {
