--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@appandflow/masonry-list": "^0.4.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-fast-image": "^7.0.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-modal": "^11.5.6",
     "react-native-root-siblings": "3.2.3",
     "react-timer-mixin": "^0.13.4"
   },
