--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "my_ui",
-  "version": "0.0.1",
-  "private": true,
+  "name": "my_rn_ui",
+  "version": "1.0.1",
+  "main": "main.js",
   "scripts": {
-    "a": "react-native run-android",
-    "i": "react-native run-ios",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
